# Exoplanets_NASA

./: README.md  linearregression.ipynb  main.py  pyproject.toml
