[tool.poetry]
name = "exoplanets-nasa"
version = "0.1.0"
description = ""
authors = ["Aleksandra Mochol <mocholaleksandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.0"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
