[tool.poetry]
name = "exoplanets-nasa"
version = "0.1.0"
description = ""
authors = ["Aleksandra Mochol <mocholaleksandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.0"
fastapi = "^0.109.0"
requests = "^2.31.0"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
